<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/crm_top_bar_1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">
        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/text_yellow"
            android:text="工号："/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/crm_top_bar_2"
        android:layout_below="@+id/crm_top_bar_1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/bg_topbar">

        <!--android:text="在装线路："-->
        <TextView
            android:id="@+id/crm_main_zaizhuangxianlu"
            android:layout_width="match_parent"
            android:layout_height="32dp"

            android:textSize="18sp"
            android:textColor="@color/text_yellow"
            android:gravity="center"/>
        <!--android:text="在装数量："-->
        <TextView
            android:id="@+id/crm_main_zaizhuangxianlu_num"
            android:layout_width="match_parent"
            android:layout_height="32dp"

            android:textSize="18sp"
            android:textColor="@color/text_yellow"
            android:gravity="center"
            android:layout_below="@+id/crm_main_zaizhuangxianlu"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/crm_top_bar_3"
        android:layout_below="@+id/crm_top_bar_2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_chehao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="车号："
                android:textSize="18sp"
                android:textColor="@color/text_yellow"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"/>
            <TextView
                android:id="@+id/text_chehao"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textColor="@color/text_yellow"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView_chehao"
                android:layout_toEndOf="@+id/textView_chehao" />
            <TextView
                android:id="@+id/textView_chexiang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="车型："
                android:textSize="18sp"
                android:textColor="@color/text_yellow"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/text_chehao"
                android:layout_toEndOf="@+id/text_chehao" />
            <TextView
                android:id="@+id/text_chexing"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textColor="@color/text_yellow"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView_chexiang"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/crm_top_bar_4"
        android:layout_below="@+id/crm_top_bar_3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="检测工位："
                android:textSize="18sp"
                android:textColor="@color/text_yellow"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:id="@+id/textView4" />
            <Spinner
                android:id="@+id/spinner_gongwei"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView4"
                android:layout_toEndOf="@+id/textView4"></Spinner>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/crm_top_bar_5"
        android:layout_below="@+id/crm_top_bar_4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="检测工序："
                android:textSize="18sp"
                android:textColor="@color/text_yellow"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:id="@+id/textView5" />
            <Spinner
                android:id="@+id/spinner_gongxu"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView5"
                android:layout_toEndOf="@+id/textView5"></Spinner>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/crm_top_bar_6"
        android:layout_below="@+id/crm_top_bar_5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="检测项点："
                android:textSize="18sp"
                android:textColor="@color/text_yellow"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:id="@+id/textView6" />
            <Spinner
                android:id="@+id/spinner_xiangdian"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView6"
                android:layout_toEndOf="@+id/textView6"></Spinner>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
    android:id="@+id/crm_top_bar_7"
    android:layout_below="@+id/crm_top_bar_6"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/bg_topbar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/text_yellow"
            android:text="拍照说明"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/crm_top_bar_8"
        android:layout_below="@+id/crm_top_bar_7"
        android:layout_above="@id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/bg_topbar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:id="@+id/sp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="123"
                        android:textSize="18sp"
                        android:textColor="@color/text_yellow"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_gravity="center_horizontal" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/p140217"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textColor="@color/text_yellow"
                        android:text="@string/take_pic_specification"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>

            </ScrollView>



        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>





    、

















    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_crm_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_crm_1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/crm_bottom_1"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_crm_reset_xianlu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_crm_2"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/crm_bottom_2"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_crm_reset_yemian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_crm_3"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/crm_bottom_3"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_crm_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_crm_4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/crm_bottom_4"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp"/>

    </LinearLayout>
    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_above="@id/ly_tab_bar"/>
</RelativeLayout>
